--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "body-parser": "^1.19.1",
     "concurrently": "^7.0.0",
     "cors": "^2.8.5",
+    "express-mysql-session": "^2.1.7",
+    "express-session": "^1.17.2",
     "mysql": "^2.18.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
